--- a/src/App.css
+++ b/src/App.css
@@ -51,15 +51,20 @@
   width: 100%;
 }
 
-.panel .views li {
+.panel .views a {
   margin-right: 15px;
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
   color: rgba(0, 0, 0, 0.4);
+  text-decoration: none;
 }
 
-.views li.active {
+.panel .views a:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.views a.is-active {
   color: rgba(0, 0, 0, 0.8);
   border-bottom: 2px solid rgba(0, 0, 0, 0.8);
 }
